
  * ACK NMU - thanks Christian!
  * debian/rules: Fix how we determine the phpapi version to depend on.
    The previous way was technically wrong, but got the right answer
    for Debian unstable, and for Ubuntu dapper and edgy (Debian sarge was
    wrong though).
  * debian/po/nb.po: New debconf translation from Hans Fredrik Nordhaug
    (Closes: #414461).

 -- Olly Betts <olly@survex.com>  Wed, 28 Mar 2007 02:57:13 +0000

xapian-bindings (0.9.9-1.1) unstable; urgency=low

  * Non-maintainer upload on maintainer's request to fix remaining l10n issues.
  * Debconf translations:
    - German. Closes: #412250
    - Russian. Closes: #412274
    - Galician. Closes: #412338
    - Basque. Closes: #412420
    - Catalan. Closes: #412579
    - Romanian. Closes: #412933

 -- Christian Perrier <bubulle@debian.org>  Sat, 10 Mar 2007 07:41:40 +0100

xapian-bindings (0.9.9-1) unstable; urgency=low

  * New upstream release.
  * debian/rules: Build tcl and ruby bindings in the same build tree to save
    a bit of diskspace and time during the build.
  * debian/rules: Fix the incorrect "Conflicts:" and "Replaces:" we generate
    for the old "per-version" Python packages (broken in 0.9.8-1).
  * debian/patch: Patch to fix building bindings for Python 2.5 on amd64
    (needed for the Ubuntu etch and any other Debian derived distros with
    Python 2.5).

 -- Olly Betts <olly@survex.com>  Fri, 10 Nov 2006 04:03:28 +0000

xapian-bindings (0.9.8-1) unstable; urgency=low

  * New upstream release.
  * debian/rules: Add no-op "binary-indep" target (Closes: #395761).
  * debian/rules: Don't try to build PHP bindings on hurd-i386 (PHP hasn't
    been ported, but Python, Tcl, and Ruby have).
  * debian/rules: Upstream no longer support Python 2.1 bindings so update
    comments regarding the Python versions supported by the sarge backport.
  * debian/control.in,debian/control-php.in: Add "Suggests: xapian-doc" since