@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 #
 # Copyright (C) 2004,2005,2006 Lemur Consulting Ltd
-# Copyright (C) 2006 Olly Betts
+# Copyright (C) 2006,2007 Olly Betts
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -61,7 +61,12 @@ ifeq ($(COMPONENT), stable)
 # Debian stable doesn't have PHP5.
 PHP_VERSIONS := 4
 else
+ifeq ($(COMPONENT), feisty)
+# Ubuntu feisty doesn't have PHP4.
+PHP_VERSIONS := 5
+else
 PHP_VERSIONS := 4 5
+endif
 endif
 
 # We'll need this if we ever generate different .py modules for different
